# src/resources/swagger.yaml
@@ -20,14 +20,14 @@ paths:
                 type: object
 
   /admin/submission/lock:
-    get:
+    post:
       tags:
         - Admin
       summary: Set sample registration and clinical submission lock state
       parameters:
-        - name: lockState
+        - name: setLock
           description: the boolean state of the submission system lock
-          in: path
+          in: query
           required: true
           schema:
             type: boolean
