# src/routes/admin.ts
@@ -5,6 +5,6 @@ import submissionAPI from '../submission/submission-api';
 
 const router = express.Router();
 
-router.post('/lock/:lockState', wrapAsync(submissionAPI.setSubmissionLockState));
+router.post('/submission/lock', wrapAsync(submissionAPI.setSubmissionLockState));
 
 export default router;
